core: scale pictures down with every pixel counted, and clear the SpotBugs gate
Image.scaled hands the work to the platform, and two of the three platforms that
matter answer with a POINT SAMPLER: the desktop port reads one source pixel per
destination pixel and discards the rest, and Android asks createScaledBitmap not
to filter. Enlarging, that is merely blocky. Reducing, it is aliasing -- jagged
edges and moire on anything with detail in it, which is every downscaled
photograph and every icon drawn smaller than it was authored.

Image.scaledSmooth averages the whole source rectangle behind each destination
pixel instead, and fillSmooth is the same for a centre crop. Both are ADDITIVE:
scaled() and fill() are untouched, so no existing rendering moves and no
screenshot baseline has to be reseeded. The runtime's image widget uses them
wherever the picture gets smaller, where the result is cached anyway.

The fractional edge weights are the whole of it. Rounding each box to whole
source pixels makes consecutive boxes one and two source pixels wide in turn,
which moves their centres off the grid they are sampling: measured, that alone
shifted a downscaled photograph a full pixel and cost more than the filtering
gained (11.62% wrong pixels against the point sampler's 7.74%). With the weights
the same route measures 5.90%, and it beats a bilinear Java2D step in the port
as well, which scored 6.21%.

The grid-list demo is now 5.90% from 7.74% and the sweep's mean 2.50% -> 2.46%,
with no route moving the wrong way. Every remaining pixel there is photo detail:
the tile geometry is identical to within one pixel on both axes and the two
screens are indistinguishable.

Also clears four SpotBugs findings, which is a ZERO-findings gate: two are from
the container transform above (a boxed Integer constructor, a null check the
analyser can prove redundant) and two pre-date it -- CupertinoPageTransition
dereferences a motion it guards only through its sibling. Both motions are set